# Hypergraph-Core-Decomposition-with-Intersection-Bounds

./: .gitignore  CMakeLists.txt  README.md  all.sh  main.cpp  run.sh
dataset/preSolve1/: README.md  main.cpp
dataset/preSolve2/: README.md  main.cpp
khcore/: khcore.cpp  static.cpp
lib/: config.cpp  graph.cpp  union_find.cpp
